# opps

./: .gitignore  README.md  YourFile.step  andre.pcf.stp  pyproject.toml  run.sh  teste.pcf  teste.step
data/example_files/pcf/: teste.pcf  teste2.pcf
data/example_files/step/: teste.step
data/ui_files/: add_structure.ui  config_bend.ui  config_pipe.ui  edit_bend.ui  edit_point.ui
opps/: __init__.py  __main__.py
opps/interface/: application.py  main_window.py
opps/interface/menus/: __init__.py  mode_menu.py  project_menu.py
opps/interface/toolboxes/: __init__.py  geometry_toolbox.py
opps/interface/ui_files/: add_structure.ui  edit_bend.ui
opps/interface/widgets/: __init__.py  add_structures_widget.py  cross_section_widget.py  edit_bend_widget.py  edit_pipe_widget.py  edit_structures_widget.py  error_line_edit.py  filtrable_table.py
opps/io/cad_file/: cad_handler.py  step_exporter.py  step_handler.py
opps/io/pcf/: pcf_exporter.py  pcf_handler.py  pcf_importer.py  pcf_reader.py
opps/io/yaml_file/: configuration.py
opps/model/: __init__.py  bend.py  elbow.py  flange.py  pipe.py  pipeline.py  pipeline_editor.py  point.py  reducer_eccentric.py  structure.py
opps/model/beam/: beam.py  c_beam.py  circular_beam.py  i_beam.py  rectangular_beam.py  t_beam.py
opps/model/editors/: beam_editor.py  connection_editor.py  divide_editor.py  editor.py  main_editor.py  morph_editor.py  pipeline_editor.py  points_editor.py  selection_editor.py
opps/properties/: __init__.py  beam_cross_section.py  cross_section.py  pipe_cross_section.py
(+61 files in other folders)
