[tool.poetry]
name = "opps"
version = "0.1.0"
description = ""
authors = ["André Fernandes <fpf.andre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyqt5 = "^5.15.9"
vtk = "^9.2.6"
pyqtdarktheme = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
